test/module/cycle_a.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< ppap >>= exec (Hol.main --test)
Hol =<< Hol> Compiling test.module.cycle_a ( test/module/cycle_a.hol, interpreted )
/home/lim/Desktop/Haskell/portfolio/ppap/test/module/cycle_b.hol:1:1-1:27: error: [HolBETA2-ModuleError]
   |                            
 1 | import test.module.cycle_a.
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Import cycle detected: test.module.cycle_b -> test.module.cycle_a -> test.module.cycle_a.

Hol =<< Hol >>= quit
